--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx vite build",
+    "build": "npx vite build && powershell -Command \"(Get-Content dist\\index.html) -replace '/assets', './assets' | Out-File -encoding ASCII dist\\index.html\"",
     "deploy": "gh-pages -d dist"
   },
   "author": "",
